# lambda_sqs

./: .fossa.yml  CHANGELOG.md  Cargo.toml  LICENSE  PRLOG.md  README.md  markdownlint.jsonc  release-hook.sh  release.toml  renovate.json  sonar-project.properties
.circleci/: config.yml  release.yml  update_prlog.yml
.github/workflows/: fossa.yml  general.yml  rust_security_audit.yml
crates/lambda_sqs/: Cargo.toml  README.md  release-hook.sh  release.toml
crates/lambda_sqs/src/: domain.rs
src/: domain.rs  lib.rs
