[package]
name = "lambda_sqs"
version = "0.2.21"
description = """
Handles an SQS event and provides a vec of your type for processing. 
"""
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/lambda_sqs"
readme = "README.md"
documentation = "https://docs.rs/lambda-sqs"
categories = ["web-programming"]
keywords = ["aws", "sqs", "lambda"]
exclude = [
    ".circleci/config.yml",
    ".fossa.yml",
    ".github/workflows/fossa.yml",
    ".github/workflows/rust_security_audit.yml",
    ".gitignore",
    ".vscode/settings.json",
    ".whitesource",
    "markdownlint.jsonc",
    "renovate.json",
]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
lambda_runtime = "0.13.0"

[dev-dependencies]
tokio = "1.43.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
