[workspace]
members = ["crates/lambda_sqs"]
resolver = "2"

[workspace.package]
version = "0.3.4"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/lambda_sqs"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
lambda_runtime = "1.2.1"
tokio = "1.52.3"
